# Project---Chatting-Website

./: .breakpoints  .replit  app.py  database_creator.py  main.py  models.py  pyproject.toml  routes.py  run.py  wtform_field.py  wtform_fields.py
instance/: testdb.db
migrations/versions/: 2354c9593b4e_.py  b89d282feaff_.py
miscellaneous/: README.md  requirements.txt  setup.txt
static/scripts/: socketio.js
static/styles/: style.css
templates/: 404.html  base.html  chat.html  form_helper.html  home.html  index.html  login.html  navbar.html  postlogin-layout.html  postlogin-navbar.html  prelogin-layout.html  prelogin-navbar.html
